[gd_scene load_steps=5 format=3 uid="uid://lo0cvhptefq6"]

[ext_resource type="Script" path="res://components/game_tree.gd" id="1_62xxo"]
[ext_resource type="PackedScene" uid="uid://bjv4mraa6bhhj" path="res://ui/server_controls.tscn" id="2_fdf18"]
[ext_resource type="PackedScene" uid="uid://dnguqoae2sabp" path="res://ui/player_list.tscn" id="3_e5fxn"]
[ext_resource type="Script" path="res://components/ttt_game_mode.gd" id="4_kp1kd"]

[node name="GameTree" type="Node"]
script = ExtResource("1_62xxo")

[node name="Players" type="Node" parent="."]

[node name="ServerControls" parent="." instance=ExtResource("2_fdf18")]

[node name="PlayerList" parent="." instance=ExtResource("3_e5fxn")]

[node name="CurrentLevel" type="Node" parent="."]

[node name="Level" type="Node" parent="CurrentLevel"]

[node name="NPCs" type="Node" parent="CurrentLevel/Level"]

[node name="TttGameMode" type="Node" parent="."]
script = ExtResource("4_kp1kd")

[node name="WarmupTimer" type="Timer" parent="TttGameMode"]
wait_time = 20.0

[node name="MainStageTimer" type="Timer" parent="TttGameMode"]
wait_time = 5.0

[node name="PostRoundTimer" type="Timer" parent="TttGameMode"]
wait_time = 15.0
